# smart-comp-web

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  launch-app.ps1  log-001.txt  stop-app.ps1
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  README.md  celery_worker.ps1  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py  errors.py  routes.py  schemas.py
backend/app/core/: auth.py  config.py  contracts.py  job_service.py  jobs.py  kw_zip.py  observability.py  smart_comp.py  storage.py
backend/app/worker/: celery_app.py  runner.py  smart_comp_executor.py  tasks.py
backend/tests/: conftest.py  test_api_contracts.py  test_api_integration.py  test_auth_optional.py  test_health.py  test_kw_zip_validator.py  test_observability.py  test_pact_provider.py  test_smart_comp_config.py  test_smart_comp_execution.py  test_storage.py  test_worker_lifecycle.py
backend/tests/contracts/: provider_pact.json
backend/tests/data/: bootstrap_dual.json  bootstrap_dual.txt  bootstrap_single.json  bootstrap_single.txt  descriptive_only.json  descriptive_only.txt  kw_permutation.json  kw_permutation.txt
data/: p95_sample1.csv  p95_sample2.csv
docs/: SDD Smart-Comp Web‑App v2.md  SRS Smart-Comp Web Application v2.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/pacts/: smart-comp-web-smart-comp-api.json
frontend/scripts/: publishPacts.mjs
frontend/src/: App.test.tsx  App.tsx  (+3 more)
(+18 files in other folders)
